--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,3 +4,15 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+figure {
+    background-image: url('../img/pattern.png');
+    background-color: rgb(78, 160, 255);
+    width: 100%;
+}
+
+.logo {
+    width: 250px;
+    margin-top: 90px;
+    margin-left: 10px;
+}
