--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@
 }
 
 main {
-    margin-left: 10px;
+    margin: 0 10px;
 }
 
 article {
@@ -59,4 +59,21 @@ p {
 ul {
     margin-left: 1em;
     font-size: 20px;
+}
+
+table {
+    margin: 30px 0;
+    text-align: left;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th {
+    width: calc(100% / 3);
+    color: white;
+    background-color: rgb(31, 169, 229);
+}
+
+.odd {
+    background-color: rgb(177, 229, 242);
 }
