--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,9 @@
 }
 
 .logo {
-    width: 250px;
-    margin-top: 100px;
+    width: 300px;
+    height: 100px;
+    margin-top: 80px;
     margin-left: 10px;
 }
 
@@ -76,4 +77,35 @@ th {
 
 .odd {
     background-color: rgb(177, 229, 242);
+}
+
+footer {
+    margin: 0 10px;
+}
+
+h4 {
+    color: rgb(129, 129, 129);
+    font-size: 20px;
+}
+
+.suggestions {
+    width: 300px;
+    height: 200px;
+    padding: 10px;
+    margin: 10px 0;
+    ;
+}
+
+#monitor {
+    background-image: url('../img/monitor.jpg');
+}
+
+#graph {
+    background-image: url('../img/graph.jpg');
+}
+
+.suggestion-title {
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
 }
