--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,8 +44,8 @@ a {
     color: rgb(129, 129, 129);
 }
 
-.article-header {
-    margin-bottom: 30px;
+.article-imgs {
+    margin-top: 30px;
 }
 
 img {
@@ -64,6 +64,7 @@ ul {
 
 table {
     margin: 30px 0;
+    font-size: 20px;
     text-align: left;
     border-collapse: collapse;
     width: 100%;
@@ -109,3 +110,5 @@ h4 {
     font-size: 30px;
     font-weight: bold;
 }
+
+/* EXERCISE COMPLETED */
