updated to bonus version

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,8 @@
 }
 
 main {
-    margin: 0 10px;
+    width: 80%;
+    margin: 0 auto;
 }
 
 article {
@@ -81,7 +82,8 @@ th {
 }
 
 footer {
-    margin: 0 10px;
+    width: 80%;
+    margin: 0 auto;
 }
 
 h4 {
